deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
  labels:
    app: health-deploy
  namespace: myhome-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      labels:
        app: health
      namespace: myhome-dev
    spec:
      containers:
        - name: health
          image: shishkinav/healther:healther
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
