deploy/health-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: health
  name: health-service
  namespace: myhome-dev
spec:
  type: NodePort
  selector:
    app: health
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8000  # или указать http чтобы автоматом назначался
